k8s/polkadot-panic-alerter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polkadot-panic-alerter
spec:
  selector:
    matchLabels:
      app: polkadot-panic-alerter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: polkadot-panic-alerter
    spec:
      containers:
      - name: polkadot-api-server
        image: simplyvc/polkadot_api_server:1.9.1
        volumeMounts:
        - name: polkadot-api-server-config-vol
          mountPath: /opt/polkadot_api_server/config
        resources:
          limits:
            cpu: 0
      - name: panic-alerter
        image: simplyvc/panic_polkadot:1.1.0
        resources:
          limits:
            cpu: 0
        volumeMounts:
        - name: polkadot-panic-alerter-config-vol
          mountPath: /opt/panic_polkadot/config
        - name: polkadot-panic-alerter-logs-alerts
          mountPath: /opt/panic_polkadot/logs/alerts
        - name: polkadot-panic-alerter-logs-general
          mountPath: /opt/panic_polkadot/logs/general
      volumes:
        - name: polkadot-api-server-config-vol
          configMap:
            name: polkadot-api-server-config
        - name: polkadot-panic-alerter-config-vol
          configMap:
            name: polkadot-panic-alerter-config-vol
        - name: polkadot-panic-alerter-logs-alerts
          emptyDir: {}
        - name: polkadot-panic-alerter-logs-general
          emptyDir: {}
