k8s/polkadot-sentry-nodes.yaml
apiVersion: v1
kind: Service
metadata:
  name: polkadot-sentry-node-rpc
spec:
  ports:
  - port: 9933
  selector:
    app: polkadot-sentry-node
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: polkadot-sentry-node
spec:
  ports:
  - port: 30033
  selector:
    app: polkadot-sentry-node
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: polkadot-sentry-node
spec:
  selector:
    matchLabels:
      app: polkadot-sentry-node
  serviceName: polkadot-sentry-node
  replicas: 2
  template:
    metadata:
      labels:
        app: polkadot-sentry-node
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: polkadot-sentry-node
        image: parity/polkadot:v0.7.28
        args: [ "--sentry", "--pruning=archive", "--wasm-execution", "Compiled" ]
        ports:
        - containerPort: 9933
          name: dot-rpc-port
        ports:
        - containerPort: 30033
          name: dot-p2p-port
        volumeMounts:
        - name: polkadot-sentry-node-pv-claim
          mountPath: /polkadot
  volumeClaimTemplates:
  - metadata:
      name: polkadot-sentry-node-pv-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-ssd
      resources:
        requests:
          storage: 30Gi
